# CARLA_ADA

./: .gitignore  README.md  data_recorder.py  format_helper.py  format_helper2.py  format_helper3.py  requirements.txt  requirements2.txt
active/: lidar.py  lidar2.py  util.py
ada_exp/draw_picture/: 3d_Point.ipynb  GBR_network.ipynb  draw_context.ipynb  gbr_network.py  loss_curve.ipynb  size_time_performance.ipynb
ada_exp/gen_data/: S1_spilt.ipynb  S2_arrow_show.ipynb  S2_spilt.ipynb  gen_dataset.ipynb
ada_exp/nuscenes_toolkit/self_tools/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project_inliers  project_inliers.cpp  temp.txt  test_read_bin  test_read_bin.cpp  test_visualize.py
ada_exp/optimizer/: extract_paras.py
config/: actor_settings_template.json  sensor_config_simple.json  sensor_config_template.json  world_config_template.json
eval_code/: read.py
label_tools/: image_checker.py  kitti_checker.py  kitti_objects_label.py  rename_tool.py  test.py  yolo_label.py
recorder/: actor_factory.py  actor_tree.py  camera.py  eval.py  lidar.py  vehicle.py  walker.py  weather.py  world.py
scripts/: carla.sh  recoder.sh
test_code/: context_exp.py  context_test.py  fit_func.ipynb  fit_vis.ipynb  lidar_tool.py  pkl_parser_test.py  sklearn_test.py  torch_fit_test.py  util.py  vis_fit_res.ipynb  vis_origin.py
test_code/s1s2/: vis_s1s2.py  (+8 more)
test_data/: 000000.txt  all_data.csv  all_data_5000.csv
tool_exp/: LSF_label.py  lidar_tool.py
tools/: cuda_speedup.py  iou_3d.py  span4apollo.py
utils/: show_debug_info.py
vis_figure/: vis_tsb.ipynb
(+266 files in other folders)
